--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/vollpac
+spring.datasource.username=vollpac
+spring.datasource.password=vollpac
 
+server.port=9090
