--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=vollpac
 spring.datasource.password=vollpac
 
 server.port=9090
+server.error.include-stacktrace=never
+api.security.token.secret=${JWT_SECRET:12345678}
